@@ -1,21 +1,20 @@
-/* 
+/*
    Patchdiff2
    Portions (C) 2010 - 2011 Nicolas Pouvesle
    Portions (C) 2007 - 2009 Tenable Network Security, Inc.
-   
+
    This program is free software; you can redistribute it and/or modify
-   it under the terms of the GNU General Public License version 2 as 
+   it under the terms of the GNU General Public License version 2 as
    published by the Free Software Foundation.
-   
+
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
-   
+
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-
 
 #include "precomp.h"
 
@@ -23,7 +22,6 @@
 #include "patchdiff.h"
 
 extern cpu_t patchdiff_cpu;
-
 
 /*------------------------------------------------*/
 /* function : x86_is_rex_prefix                   */
@@ -39,7 +37,6 @@ bool x86_is_rex_prefix(unsigned char val) {
 
    return false;
 }
-
 
 /*------------------------------------------------*/
 /* function : x86_is_push_register                */
@@ -58,7 +55,6 @@ bool x86_is_push_register (unsigned char val) {
    case 0x56:   // push esi
    case 0x57:   // push edi
       return 1;
-
    default:
       return 0;
    }
@@ -81,12 +77,10 @@ bool x86_is_pop_register (unsigned char val) {
    case 0x5E:   // pop esi
    case 0x5F:   // pop edi
       return 1;
-
    default:
       return 0;
    }
 }
-
 
 /*------------------------------------------------*/
 /* function : x86_is_inc_register                 */
@@ -105,7 +99,6 @@ bool x86_is_inc_register (unsigned char val) {
    case 0x46:   // inc esi
    case 0x47:   // inc edi
       return 1;
-
    default:
       return 0;
    }
@@ -128,14 +121,10 @@ bool x86_is_dec_register (unsigned char val) {
    case 0x4E:   // dec esi
    case 0x4F:   // dec edi
       return 1;
-
    default:
       return 0;
    }
 }
-
-
-
 
 /*------------------------------------------------*/
 /* function : is_nop                              */
@@ -150,33 +139,35 @@ bool x86_is_nop (unsigned char _byte, ea_t ea) {
    unsigned long val3;
 
    if (patchdiff_cpu == CPU_X8664 && x86_is_rex_prefix(_byte)) {
-      ea++;
-      _byte = get_byte(ea + 1);
+      while (x86_is_rex_prefix(_byte)) {
+         ea++;
+         _byte = get_byte(ea);
+      }
    }
 
    // mov reg, reg - xchg reg, reg
    if (_byte == 0x8A || _byte == 0x8B || _byte == 0x87 || _byte == 0x86) {
       val = get_byte(ea + 1);
       if ( (val == 0xC0) || // mov eax, eax (al, al)
-          (val == 0xC9) || // mov ecx, ecx
-          (val == 0xDB) || // mov ebx, ebx
-          (val == 0xD2) || // mov edx, edx
-          (val == 0xF6) || // mov esi, esi
-          (val == 0xFF) || // mov edi, edi
-          (val == 0xE4) || // mov esp, esp
-          (val == 0xED) ) { // mov ebp, ebp
+              (val == 0xC9) || // mov ecx, ecx
+              (val == 0xDB) || // mov ebx, ebx
+              (val == 0xD2) || // mov edx, edx
+              (val == 0xF6) || // mov esi, esi
+              (val == 0xFF) || // mov edi, edi
+              (val == 0xE4) || // mov esp, esp
+              (val == 0xED) ) { // mov ebp, ebp
          return true;
       }
    }
    if (_byte == 0x8D) {
       val = get_byte(ea + 1);
       if ( (val == 0x00) || // lea eax, [eax]
-          (val == 0x09) || // lea ecx, [ecx]
-          (val == 0x42) || // lea edx, [edx]
-          (val == 0x4b) || // lea ebx, [ebx]
-          (val == 0x36) || // lea esi, [esi]
-          (val == 0x3f) ) { // lea edi, [edi]
-          return true;
+              (val == 0x09) || // lea ecx, [ecx]
+              (val == 0x42) || // lea edx, [edx]
+              (val == 0x4b) || // lea ebx, [ebx]
+              (val == 0x36) || // lea esi, [esi]
+              (val == 0x3f) ) { // lea edi, [edi]
+         return true;
       }
       else if ( (val == 0x40) || // lea eax, [eax+0]
               (val == 0x49) || // lea ecx, [ecx+0]
@@ -187,7 +178,7 @@ bool x86_is_nop (unsigned char _byte, ea_t ea) {
               (val == 0x7f) ) { // lea edi, [edi+0]
          val = get_byte(ea + 2);
          if (val == 0x00) {
-           return true;
+            return true;
          }
       }
       else if ( (val == 0x80) || // lea eax, [eax+0x00000000]
@@ -205,7 +196,7 @@ bool x86_is_nop (unsigned char _byte, ea_t ea) {
       else if (val == 0xb4) {
          val = get_byte(ea + 2);
          if (val == 0x26) {
-            val3 = get_long(ea+3);
+            val3 = get_long(ea + 3);
             if (val3 == 0x00) {  // lea esi, [esi+0x00000000]
                return true;
             }
@@ -242,7 +233,6 @@ bool x86_is_nop (unsigned char _byte, ea_t ea) {
    return false;
 }
 
-
 /*------------------------------------------------*/
 /* function : x86_remove_instr                    */
 /* arguments: unsigned char byte, ea_t ea         */
@@ -258,7 +248,6 @@ bool x86_remove_instr(unsigned char byte, ea_t ea) {
 
    return false;
 }
-
 
 /*------------------------------------------------*/
 /* function : x86_convert_16bit_rep               */
@@ -281,7 +270,6 @@ bool x86_convert_16bit_rep(unsigned char *byte, ea_t ea) {
 
    return false;
 }
-
 
 /*------------------------------------------------*/
 /* function : x86_convert_cond_jump               */
@@ -334,7 +322,6 @@ bool x86_convert_cond_jump(unsigned char *byte, ea_t ea) {
    return false;
 }
 
-
 /*------------------------------------------------*/
 /* function : x86_convert_cond_jump               */
 /* arguments: unsigned char val, instr address    */
@@ -368,7 +355,6 @@ int x86_is_cond_jump_pos(ea_t ea) {
 
    return 0;
 }
-
 
 /*------------------------------------------------*/
 /* function : x86_get_fake_jump                   */
@@ -420,7 +406,6 @@ bool x86_is_direct_jump(ea_t ea) {
    return false;
 }
 
-
 /*------------------------------------------------*/
 /* function : x86_is_end_block                    */
 /* arguments: ea_t ea                             */
@@ -435,7 +420,6 @@ bool x86_is_end_block(ea_t ea) {
    return false;
 }
 
-
 /*------------------------------------------------*/
 /* function : x86_get_byte                        */
 /* arguments: unsigned char _byte                 */
@@ -449,15 +433,17 @@ unsigned char x86_get_byte(ea_t ea) {
 
    byte = get_byte(ea);
 
-   if (patchdiff_cpu == CPU_X8664 && x86_is_rex_prefix(byte)) {
-      ea++;
-      byte = get_byte(ea);
+   if (patchdiff_cpu == CPU_X8664) {
+      while (x86_is_rex_prefix(byte)) {
+         ea++;
+         byte = get_byte(ea);
+      }
    }
 
-   if (x86_is_push_register (byte)) {
+   if (x86_is_push_register(byte)) {
       byte = 0x50;  // push eax
    }
-   else if (x86_is_pop_register (byte)) {
+   else if (x86_is_pop_register(byte)) {
       byte = 0x58;  // pop eax
    }
    else if (x86_is_inc_register(byte)) {
@@ -466,7 +452,7 @@ unsigned char x86_get_byte(ea_t ea) {
    else if (x86_is_dec_register(byte)) {
       byte = 0x48;  // dec eax
    }
-   
+
    x86_convert_16bit_rep(&byte, ea);
    x86_convert_cond_jump(&byte, ea);
 
